--- a/index.html
+++ b/index.html
@@ -829,78 +829,41 @@
                 <div class="col-4 col-md-6 col-sm-12">
                     <div class="content">
                         <a href="#" class="logo">
-                            <i class='bx bx-movie-play bx-tada main-color'></i>Fl<span class="main-color">i</span>x
+                            <img src="./images/logo.png" width="100" height="70" alt="">
                         </a>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut veniam ex quos hic id nobis
-                            beatae earum sapiente! Quod ipsa exercitationem officiis non error illum minima iusto et.
-                            Dolores, quibusdam?
+                            About MET
+                            From the Chairman's Desk
+                            Board of Trustees
+                            Our Faith, Vision & Mission
+                            Advantage MET
+                            Affiliations and Accreditations
                         </p>
-                        <div class="social-list">
-                            <a href="#" class="social-item">
-                                <i class="bx bxl-facebook"></i>
-                            </a>
-                            <a href="#" class="social-item">
-                                <i class="bx bxl-twitter"></i>
-                            </a>
-                            <a href="#" class="social-item">
-                                <i class="bx bxl-instagram"></i>
-                            </a>
-                        </div>
+                    
                     </div>
                 </div>
                 <div class="col-8 col-md-6 col-sm-12">
                     <div class="row">
                         <div class="col-3 col-md-6 col-sm-6">
                             <div class="content">
-                                <p><b>Flix</b></p>
                                 <ul class="footer-menu">
                                     <li><a href="#">About us</a></li>
                                     <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Pricing plans</a></li>
                                     <li><a href="#">Contacts</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-3 col-md-6 col-sm-6">
                             <div class="content">
-                                <p><b>Browse</b></p>
+                                <p><b>Utsav</b></p>
                                 <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Pricing plans</a></li>
-                                    <li><a href="#">Contacts</a></li>
+                                    <li><a href="#">Events</a></li>
+                                    <li><a href="#">Attendance</a></li>
+                                    <li><a href="#">Notice</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-3 col-md-6 col-sm-6">
-                            <div class="content">
-                                <p><b>Help</b></p>
-                                <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Pricing plans</a></li>
-                                    <li><a href="#">Contacts</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-3 col-md-6 col-sm-6">
-                            <div class="content">
-                                <p><b>Download app</b></p>
-                                <ul class="footer-menu">
-                                    <li>
-                                        <a href="#">
-                                            <img src="./images/google-play.png" alt="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="./images/app-store.png" alt="">
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -910,8 +873,17 @@
 
     <!-- COPYRIGHT SECTION -->
     <div class="copyright">
-        Copyright 2021 <a href="https://www.youtube.com/channel/UCnNgtK4tGlWcceXVzoyTg8Q" target="_blank">
-            Tuat Tran Anh</a>
+        <div class="social-list">
+            <a href="#" class="social-item">
+                <i class="bx bxl-facebook"></i>
+            </a>
+            <a href="#" class="social-item">
+                <i class="bx bxl-twitter"></i>
+            </a>
+            <a href="#" class="social-item">
+                <i class="bx bxl-instagram"></i>
+            </a>
+        </div>
     </div>
     <!-- END COPYRIGHT SECTION -->
 
