footer and mobile nav updated

--- a/index.html
+++ b/index.html
@@ -826,44 +826,30 @@
     <footer class="section">
         <div class="container">
             <div class="row">
-                <div class="col-4 col-md-6 col-sm-12">
+                <div class="col-6 col-md-6 col-sm-12">
                     <div class="content">
-                        <a href="#" class="logo">
-                            <img src="./images/logo.png" width="100" height="70" alt="">
-                        </a>
                         <p>
-                            About MET
-                            From the Chairman's Desk
-                            Board of Trustees
-                            Our Faith, Vision & Mission
-                            Advantage MET
-                            Affiliations and Accreditations
+                            Mumbai Educational Trust,
+                            Bhujbal Knowledge City,
+                            Bandra Reclamation, Bandra (West),
+                            Mumbai - 400 050, Maharashtra, India
                         </p>
-                    
                     </div>
                 </div>
-                <div class="col-8 col-md-6 col-sm-12">
-                    <div class="row">
-                        <div class="col-3 col-md-6 col-sm-6">
-                            <div class="content">
-                                <ul class="footer-menu">
-                                    <li><a href="#">About us</a></li>
-                                    <li><a href="#">My profile</a></li>
-                                    <li><a href="#">Contacts</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-3 col-md-6 col-sm-6">
-                            <div class="content">
-                                <p><b>Utsav</b></p>
-                                <ul class="footer-menu">
-                                    <li><a href="#">Events</a></li>
-                                    <li><a href="#">Attendance</a></li>
-                                    <li><a href="#">Notice</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
+                <div class="col-6 col-md-6 col-sm-12">
+                    <div class="content">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1585.6244357723208!2d72.82837502002538!3d19.05178722536715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c93f3228b1d9%3A0x3bbcfaf779efad37!2sMumbai+Educational+Trust+MET+League+of+Colleges!5e0!3m2!1sen!2sin!4v1523433495957"
+                            width="100%" height="300" style="border:0; border-radius: 15px;" allowfullscreen=""
+                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                            keywords="PGDM, PGDM in Marketing, PGDM Admissions, PGDM in Media & Entertainment, best pgdm college in mumbai, pgdm course fees in mumbai, pgdm course details, pgdm course duration, pgdm admission in mumbai, pgdm program, pgdm admission process, top b-schools in india, top b-schools in mumbai">
+                            PGDM, PGDM in Marketing, PGDM Admissions, PGDM in Media & Entertainment, best pgdm college
+                            in
+                            mumbai, pgdm course fees in mumbai, pgdm course details, pgdm course duration, pgdm
+                            admission in
+                            mumbai, pgdm program, pgdm admission process, top b-schools in india, top b-schools in
+                            mumbai
+                        </iframe>
                     </div>
                 </div>
             </div>
@@ -873,17 +859,7 @@
 
     <!-- COPYRIGHT SECTION -->
     <div class="copyright">
-        <div class="social-list">
-            <a href="#" class="social-item">
-                <i class="bx bxl-facebook"></i>
-            </a>
-            <a href="#" class="social-item">
-                <i class="bx bxl-twitter"></i>
-            </a>
-            <a href="#" class="social-item">
-                <i class="bx bxl-instagram"></i>
-            </a>
-        </div>
+        
     </div>
     <!-- END COPYRIGHT SECTION -->
 
