--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Genre</a></li>
+                    <li><a href="#">Event</a></li>
                     <li><a href="#">Movies</a></li>
                     <li><a href="#">Series</a></li>
                     <li><a href="#">About</a></li>
@@ -67,22 +67,6 @@
                             <div class="item-content-title top-down">
                                 Black Panther
                             </div>
-                            <div class="movie-infos top-down delay-2">
-                                <div class="movie-info">
-                                    <i class="bx bxs-star"></i>
-                                    <span>9.5</span>
-                                </div>
-                                <div class="movie-info">
-                                    <i class="bx bxs-time"></i>
-                                    <span>120 mins</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>HD</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>16+</span>
-                                </div>
-                            </div>
                             <div class="item-content-description top-down delay-4">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt
                                 non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias
@@ -91,7 +75,7 @@
                             <div class="item-action top-down delay-6">
                                 <a href="#" class="btn btn-hover">
                                     <i class="bx bxs-right-arrow"></i>
-                                    <span>Watch now</span>
+                                    <span>Register</span>
                                 </a>
                             </div>
                         </div>
@@ -107,22 +91,6 @@
                             <div class="item-content-title top-down">
                                 Supergirl
                             </div>
-                            <div class="movie-infos top-down delay-2">
-                                <div class="movie-info">
-                                    <i class="bx bxs-star"></i>
-                                    <span>9.5</span>
-                                </div>
-                                <div class="movie-info">
-                                    <i class="bx bxs-time"></i>
-                                    <span>120 mins</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>HD</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>16+</span>
-                                </div>
-                            </div>
                             <div class="item-content-description top-down delay-4">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt
                                 non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias
@@ -131,7 +99,7 @@
                             <div class="item-action top-down delay-6">
                                 <a href="#" class="btn btn-hover">
                                     <i class="bx bxs-right-arrow"></i>
-                                    <span>Watch now</span>
+                                    <span>Register</span>
                                 </a>
                             </div>
                         </div>
@@ -147,22 +115,6 @@
                             <div class="item-content-title top-down">
                                 Wanda Vision
                             </div>
-                            <div class="movie-infos top-down delay-2">
-                                <div class="movie-info">
-                                    <i class="bx bxs-star"></i>
-                                    <span>9.5</span>
-                                </div>
-                                <div class="movie-info">
-                                    <i class="bx bxs-time"></i>
-                                    <span>120 mins</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>HD</span>
-                                </div>
-                                <div class="movie-info">
-                                    <span>16+</span>
-                                </div>
-                            </div>
                             <div class="item-content-description top-down delay-4">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt
                                 non odit, cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias
@@ -171,7 +123,7 @@
                             <div class="item-action top-down delay-6">
                                 <a href="#" class="btn btn-hover">
                                     <i class="bx bxs-right-arrow"></i>
-                                    <span>Watch now</span>
+                                    <span>Register</span>
                                 </a>
                             </div>
                         </div>
@@ -338,12 +290,13 @@
     <div class="section">
         <div class="container">
             <div class="section-header">
-                MET EVENTS CATEGORY
+                <p>MET EVENTS </p>
+                <button class="seemorebutton"> See More</button>
             </div>
             <div class="movies-slide carousel-nav-center owl-carousel">
                 <!-- MOVIE ITEM -->
                 <a href="#" class="movie-item">
-                    <img src="./images/MET-USTAV//dance img.png" alt="">
+                    <img src="./images/movies/bat-man.jpg" alt="">
                     <div class="movie-item-content">
                         <div class="movie-item-title">
                             Dance
@@ -359,7 +312,7 @@
                 <!-- END MOVIE ITEM -->
                 <!-- MOVIE ITEM -->
                 <a href="#" class="movie-item">
-                    <img src="./images/MET-USTAV/singing-img.jpg" alt="">
+                    <img src="./images/movies/call.jpg" alt="">
                     <div class="movie-item-content">
                         <div class="movie-item-title">
                             Singing
@@ -502,7 +455,8 @@
     <div class="section">
         <div class="container">
             <div class="section-header">
-                EVENTS
+                <p>MET EVENTS CATEGORY</p>
+                <button class="seemorebutton"> See More</button>
             </div>
             <div class="movies-slide carousel-nav-center owl-carousel">
                 <!-- MOVIE ITEM -->
@@ -692,13 +646,48 @@
     </div>
     <!-- END LATEST SERIES SECTION -->
 
+    <!-- <div class="container">
+        <div class="detailssection">
+            <div class="image">
+                <img src="./images/transformer-banner.jpg" alt="">
+            </div>
+            <div class="details">
+                <div class="itemcontent">
+                    <div class="item-content-title">
+                        Transformer
+                    </div>
+                    <div class="movie-infos">
+                        <div class="movie-info">
+                            <i class="bx bxs-star"></i>
+                            <span>9.5</span>
+                        </div>
+                        <div class="movie-info">
+                            <i class="bx bxs-time"></i>
+                            <span>120 mins</span>
+                        </div>
+                        <div class="movie-info">
+                            <span>HD</span>
+                        </div>
+                        <div class="movie-info">
+                            <span>16+</span>
+                        </div>
+                    </div>
+                    <div class="item-content-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, possimus eius. Deserunt non odit,
+                        cum vero reprehenderit laudantium odio vitae autem quam, incidunt molestias ratione mollitia
+                        accusantium, facere ab suscipit.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div> -->
 
 
     <!-- SPECIAL MOVIE SECTION -->
     <div class="section">
         <div class="hero-slide-item">
             <img src="./images/transformer-banner.jpg" alt="">
-            <div class="overlay"></div>
             <div class="hero-slide-item-content">
                 <div class="item-content-wraper">
                     <div class="item-content-title">
@@ -728,7 +717,7 @@
                     <div class="item-action">
                         <a href="#" class="btn btn-hover">
                             <i class="bx bxs-right-arrow"></i>
-                            <span>Watch now</span>
+                            <span>Register</span>
                         </a>
                     </div>
                 </div>
@@ -741,9 +730,6 @@
     <div class="section">
         <div class="container">
             <div class="pricing">
-                <div class="pricing-header">
-                    Fl<span class="main-color">i</span>x pricing
-                </div>
                 <div class="pricing-list">
                     <div class="row">
                         <div class="col-4 col-md-12 col-sm-12">
@@ -859,7 +845,7 @@
 
     <!-- COPYRIGHT SECTION -->
     <div class="copyright">
-        
+
     </div>
     <!-- END COPYRIGHT SECTION -->
 
