--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="container">
             <div class="nav">
                 <a href="#" class="logo">
-                    <img src="./images/logo.png" width="100" height="70" alt="">
+                    <!-- <img src="./images/logo.png" width="100" height="70" alt=""> -->
+                     <p>MET-UTSAV</p>
                 </a>
                 <ul class="nav-menu" id="nav-menu">
                     <li><a href="#">Home</a></li>
@@ -58,7 +59,7 @@
                 <!-- SLIDE ITEM -->
                 <div class="hero-slide-item">
                     <img src="./images/MET-USTAV//slider//1.png" alt="">
-                    <div class="overlay"></div>
+                    <!-- <div class="overlay"></div> -->
                     <div class="hero-slide-item-content">
                         <div class="item-content-wraper">
                             <div class="item-content-title top-down">
